update fix for qbank pagination z-index

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -154,7 +154,7 @@ a {
   border-bottom-color: #004f2e;
 }
 .page-item.active .page-link {
-  z-index: 3;
+  z-index: 0;
   color: #fff;
   background-color: #004f2e;
   border-color: #004f2e;
